--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,17 @@
 steps:
 
-- id: Where am I?
+- id: 1. Where am I?
   name: gcr.io/cloud-builders/docker
   entrypoint: bash
   args:
   - "-c"
   - "pwd && ls -l"
+  _ "touch mark"
+
+- id: 2. Where am I?
+  name: gcr.io/cloud-builders/docker
+  dir: test_cloudbuild
+  entrypoint: bash
+  args:
+  - "-c"
+  - "pwd && ls -l /workspace && ls -l"
